syntax = "proto3";

import "google/type/date.proto";
import "google/type/decimal.proto";
import "taxes.proto";

package commons.taxesversions;

option java_package = "com.rfindustries.shared.proto";
option java_multiple_files = true;

message FindTaxVersionRequest {
  int64 taxId = 1;
  google.type.Date date = 2;
}

message TaxVersion {
  int64 id = 1;
  int64 taxId = 2;
  google.type.Date starDate = 3;
  google.type.Decimal  rate = 4;
  int64 business_customer_id = 5;
  int64 enterprise_id = 6;
  commons.taxes.Tax tax = 7;
}

service TaxVersionService {
  rpc findTaxVersionByTaxIdAndDate(FindTaxVersionRequest) returns (TaxVersion) {};
}